--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/beat-battle-icon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/beat-battle/beat-battle-icon.svg" />
+    <link rel="shortcut icon" href="/beat-battle/beat-battle-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="version" content="__COMMIT_HASH__" />
     <title>Beat Battle</title>
